; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/powerplay/hwmgr/extr_smu8_hwmgr.c_smu8_dpm_powergate_vce.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/powerplay/hwmgr/extr_smu8_hwmgr.c_smu8_dpm_powergate_vce.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pp_hwmgr = type { i32, %struct.smu8_hwmgr* }
%struct.smu8_hwmgr = type { i32 }

@AMD_IP_BLOCK_TYPE_VCE = common dso_local global i32 0, align 4
@AMD_PG_STATE_GATE = common dso_local global i32 0, align 4
@AMD_CG_STATE_GATE = common dso_local global i32 0, align 4
@AMD_CG_STATE_UNGATE = common dso_local global i32 0, align 4
@AMD_PG_STATE_UNGATE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pp_hwmgr*, i32)* @smu8_dpm_powergate_vce to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @smu8_dpm_powergate_vce(%struct.pp_hwmgr* %0, i32 %1) #0 {
  %3 = alloca %struct.pp_hwmgr*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.smu8_hwmgr*, align 8
  store %struct.pp_hwmgr* %0, %struct.pp_hwmgr** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.pp_hwmgr*, %struct.pp_hwmgr** %3, align 8
  %7 = getelementptr inbounds %struct.pp_hwmgr, %struct.pp_hwmgr* %6, i32 0, i32 1
  %8 = load %struct.smu8_hwmgr*, %struct.smu8_hwmgr** %7, align 8
  store %struct.smu8_hwmgr* %8, %struct.smu8_hwmgr** %5, align 8
  %9 = load i32, i32* %4, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %30

11:                                               ; preds = %2
  %12 = load %struct.pp_hwmgr*, %struct.pp_hwmgr** %3, align 8
  %13 = getelementptr inbounds %struct.pp_hwmgr, %struct.pp_hwmgr* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = load i32, i32* @AMD_IP_BLOCK_TYPE_VCE, align 4
  %16 = load i32, i32* @AMD_PG_STATE_GATE, align 4
  %17 = call i32 @amdgpu_device_ip_set_powergating_state(i32 %14, i32 %15, i32 %16)
  %18 = load %struct.pp_hwmgr*, %struct.pp_hwmgr** %3, align 8
  %19 = getelementptr inbounds %struct.pp_hwmgr, %struct.pp_hwmgr* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  %21 = load i32, i32* @AMD_IP_BLOCK_TYPE_VCE, align 4
  %22 = load i32, i32* @AMD_CG_STATE_GATE, align 4
  %23 = call i32 @amdgpu_device_ip_set_clockgating_state(i32 %20, i32 %21, i32 %22)
  %24 = load %struct.pp_hwmgr*, %struct.pp_hwmgr** %3, align 8
  %25 = call i32 @smu8_enable_disable_vce_dpm(%struct.pp_hwmgr* %24, i32 0)
  %26 = load %struct.pp_hwmgr*, %struct.pp_hwmgr** %3, align 8
  %27 = call i32 @smu8_dpm_powerdown_vce(%struct.pp_hwmgr* %26)
  %28 = load %struct.smu8_hwmgr*, %struct.smu8_hwmgr** %5, align 8
  %29 = getelementptr inbounds %struct.smu8_hwmgr, %struct.smu8_hwmgr* %28, i32 0, i32 0
  store i32 1, i32* %29, align 4
  br label %51

30:                                               ; preds = %2
  %31 = load %struct.pp_hwmgr*, %struct.pp_hwmgr** %3, align 8
  %32 = call i32 @smu8_dpm_powerup_vce(%struct.pp_hwmgr* %31)
  %33 = load %struct.smu8_hwmgr*, %struct.smu8_hwmgr** %5, align 8
  %34 = getelementptr inbounds %struct.smu8_hwmgr, %struct.smu8_hwmgr* %33, i32 0, i32 0
  store i32 0, i32* %34, align 4
  %35 = load %struct.pp_hwmgr*, %struct.pp_hwmgr** %3, align 8
  %36 = getelementptr inbounds %struct.pp_hwmgr, %struct.pp_hwmgr* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 8
  %38 = load i32, i32* @AMD_IP_BLOCK_TYPE_VCE, align 4
  %39 = load i32, i32* @AMD_CG_STATE_UNGATE, align 4
  %40 = call i32 @amdgpu_device_ip_set_clockgating_state(i32 %37, i32 %38, i32 %39)
  %41 = load %struct.pp_hwmgr*, %struct.pp_hwmgr** %3, align 8
  %42 = getelementptr inbounds %struct.pp_hwmgr, %struct.pp_hwmgr* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 8
  %44 = load i32, i32* @AMD_IP_BLOCK_TYPE_VCE, align 4
  %45 = load i32, i32* @AMD_PG_STATE_UNGATE, align 4
  %46 = call i32 @amdgpu_device_ip_set_powergating_state(i32 %43, i32 %44, i32 %45)
  %47 = load %struct.pp_hwmgr*, %struct.pp_hwmgr** %3, align 8
  %48 = call i32 @smu8_dpm_update_vce_dpm(%struct.pp_hwmgr* %47)
  %49 = load %struct.pp_hwmgr*, %struct.pp_hwmgr** %3, align 8
  %50 = call i32 @smu8_enable_disable_vce_dpm(%struct.pp_hwmgr* %49, i32 1)
  br label %51

51:                                               ; preds = %30, %11
  ret void
}

declare dso_local i32 @amdgpu_device_ip_set_powergating_state(i32, i32, i32) #1

declare dso_local i32 @amdgpu_device_ip_set_clockgating_state(i32, i32, i32) #1

declare dso_local i32 @smu8_enable_disable_vce_dpm(%struct.pp_hwmgr*, i32) #1

declare dso_local i32 @smu8_dpm_powerdown_vce(%struct.pp_hwmgr*) #1

declare dso_local i32 @smu8_dpm_powerup_vce(%struct.pp_hwmgr*) #1

declare dso_local i32 @smu8_dpm_update_vce_dpm(%struct.pp_hwmgr*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
